@startuml
class Duck {
  + quack(): void
  + swim(): void
}

class ElectronicDuck {
  + quack(): void
  + swim(): void
  + turnOn(): void
  + turnOff(): void
  - _on: boolean
}

Duck <|-- ElectronicDuck

class Pool {
  + run(): void
  - quack(ducks: Duck[]): void
  - swim(ducks: Duck[]): void
}

Pool --> Duck
@enduml
